updated: profile fixing overflow chart bug

--- a/public_html/style/chatroom.css
+++ b/public_html/style/chatroom.css
@@ -155,6 +155,7 @@
     padding: 10px;
     color: wheat;
     height: 90%;
+    width: 100%;
 }
 
 #userInputContainer {
